syntax = "proto3";

package resource.resource;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "resource/resource/params.proto";
import "resource/resource/farm.proto";

option go_package = "resource/x/resource/types";

// GenesisState defines the resource module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params params    = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated Farm   farmList  = 2 [(gogoproto.nullable) = false] ;
           uint64 farmCount = 3;
}

