syntax = "proto3";

package resource.resource;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "resource/resource/params.proto";
import "resource/resource/farm.proto";

option go_package = "resource/x/resource/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateFarm   (MsgCreateFarm  ) returns (MsgCreateFarmResponse  );
  rpc UpdateFarm   (MsgUpdateFarm  ) returns (MsgUpdateFarmResponse  );
  rpc DeleteFarm   (MsgDeleteFarm  ) returns (MsgDeleteFarmResponse  );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                           "authority";
  option           (amino.name) = "resource/x/resource/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateFarm {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string animal  = 2;
  string plant   = 3;
}

message MsgCreateFarmResponse {
  uint64 id = 1;
}

message MsgUpdateFarm {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
  string animal  = 3;
  string plant   = 4;
}

message MsgUpdateFarmResponse {}

message MsgDeleteFarm {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteFarmResponse {}

